Solve alignment issue and bugs

--- a/src/Assets/css/Dialog.css
+++ b/src/Assets/css/Dialog.css
@@ -41,7 +41,7 @@
 .cancel{
     background-color: var(--secondary-color) !important;
     color: var(--primary-color) !important;
-    border-color: #E7E7E7 !important;
+    border-color: var(--primary-color) !important;
 }
 
 .confirm{
